text align fix search

--- a/styles/styleSearch.css
+++ b/styles/styleSearch.css
@@ -19,6 +19,7 @@ body {
     margin: 20px;
     overflow: hidden;
     border: solid 1px rgba(0, 0, 0, 0.91);
+    text-align: center;
 }
 
 .image {
